k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3tier-database
  namespace: 3tier-demo
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:12
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: 3tier-efs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: 3tier-database
  namespace: 3tier-demo
  labels:
    app: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: database
